--- a/src/app/glucose-record/glucose-record.component.html
+++ b/src/app/glucose-record/glucose-record.component.html
@@ -14,6 +14,6 @@
 <button 
 class="btn btn-primary" 
 [disabled]="!f2.valid"
-type="submit">Submit 2</button>
+type="submit">Submit</button>
 
 </form>
