--- a/src/app/exercise-record/exercise-record.component.html
+++ b/src/app/exercise-record/exercise-record.component.html
@@ -51,6 +51,6 @@
     <button 
 class="btn btn-primary" 
 [disabled]="!f2.valid"
-type="submit">Submit 2</button>
+type="submit">Submit</button>
     
 </form>
