--- a/src/app/add-record/add-record.component.html
+++ b/src/app/add-record/add-record.component.html
@@ -43,7 +43,11 @@
                 [disabled]="rs.EnableSave"
                 type="Reset">Clear</button>
 
+                <input type="hidden" [(ngModel)]="rs.message">
+
         </div>
             </div>
+            <p class="statusmessage">{{rs.message}}</p>
+            
             
            
