FOOD with dynamic grid, still to fix refresh

--- a/src/app/add-record/add-record.component.html
+++ b/src/app/add-record/add-record.component.html
@@ -43,7 +43,7 @@
                 [disabled]="rs.EnableSave"
                 type="Reset">Clear</button>
 
-                <input type="hidden" [(ngModel)]="rs.message">
+                <!--<input type="hidden" [(ngModel)]="rs.message">-->
 
         </div>
             </div>
