dynamic grid update errors

--- a/src/app/meal/meal.component.html
+++ b/src/app/meal/meal.component.html
@@ -29,7 +29,7 @@
                   <input name="cant" [(ngModel)]="fr.cant" class="form-control" type="text" />    
                 </td>    
                 <td>    
-                    <input name="brand" [(ngModel)]="fr.fi.brand" class="form-control" type="text" />    
+                    {{fr.fi.brand}}
                 </td>    
             </tr>    
             <tr>    
