--- a/src/app/exercise-record/exercise-record.component.html
+++ b/src/app/exercise-record/exercise-record.component.html
@@ -1,6 +1,5 @@
 <form (ngSubmit)="onSubmit(f2)" #f2="ngForm">
 <div class="row">
-        <label for="distance">Distance:</label>
         <input 
             type="number" 
             placeholder="Distance" 
@@ -10,8 +9,9 @@
             max="4000"
             required
             #distance="ngModel"><span class="help-block" *ngIf="!distance.valid && distance.touched">Please enter Distance</span>
+        </div>
 
-        <label for="hh">Time:</label>
+        <div class="row">
         <input 
             type="number" 
             placeholder="HH" 
@@ -36,8 +36,10 @@
             name = "ss"
             min="0"
             max="59">
+
+        </div>
         
-        <label for="calories">Calories Burnt:</label>
+        <div class= "row">
         <input 
         type="number" 
         placeholder="Calories" 
@@ -47,7 +49,7 @@
         max="2000"
         required
         #calories="ngModel"><span class="help-block" *ngIf="!calories.valid && calories.touched">Please enter Calory count</span>
-    </div>
+        </div>
     <button 
 class="btn btn-primary" 
 [disabled]="!f2.valid"
