--- a/src/app/meal/meal.component.html
+++ b/src/app/meal/meal.component.html
@@ -3,16 +3,24 @@
     <table class="table table-striped table-bordered">    
         <thead>    
             <tr>    
-                <th>Action</th>    
+                <th>X</th>    
                 <th>Food Item</th>    
                 <th>Qty</th>    
+                <th>Units</th>
+                <th>Sugar</th>
+                <th>Fat</th>
+                <th>Sodium</th>
+                <th>Calories</th>
+                <th>Protein</th>
+                <th>Item</th>    
+                <th>Brand</th>    
                 <th>Brand</th>    
             </tr>    
         </thead>    
         <tbody>    
              <tr *ngFor="let fr of foodRecords; let i = index;">    
               <td (click)="deleteRow(i)">    
-                <i class="fa fa-trash fa-2x"></i>    
+                <i class="fa fa-trash fa-1x"></i>    
               </td>    
               <td>
                 <select 
@@ -25,15 +33,30 @@
                 </select>                
               </td>
                 <td>    
-                  <input [name]="rs.getName('cant',i)" [(ngModel)]="fr.cant" class="form-control" type="text" />    
-                </td>    
+                  <input [disabled]="fr.foodItemId==null" 
+                    [name]="rs.getName('cant',i)" 
+                    [(ngModel)]="fr.cant" class="form-control" required type="number" 
+                    (focusout)="calcCant(fr.foodItemId, i, fr.cant)"/>    
+                </td>  
+                <td>{{fr.fi.unidad}}</td>
+                <td>{{fr.sugar}}</td>
+                <td>{{fr.fat}}</td>
+                <td>{{fr.sodium}}</td>
+                <td>{{fr.calories}}</td>
+                <td>{{fr.prot}}</td>
+                <td>
+                  <img [src]="fr.fi.image" class="img-responsive" style="max-height: 40px;">
+                </td>  
+                <td>
+                  {{rs.getBrand(fr.fi.brand).description}}
+                </td>
                 <td>    
-                    {{fr.fi.brand}}
-                </td>    
+                    <img [src]="rs.getBrand(fr.fi.brand).url" class="img-responsive" style="max-height: 40px;">
+                  </td>    
             </tr>    
             <tr>    
               <td (click)="addRow(i)">    
-                <i class="fa fa-plus fa-2x"></i>    
+                <i class="fa fa-plus fa-1x"></i>    
               </td>    
             </tr>    
         </tbody>    
@@ -41,7 +64,7 @@
   </div>    
   <button 
 class="btn btn-primary" 
-[disabled]="!f2.valid"
+[disabled]="false"
 type="submit">Submit</button>
 
 </form>
