--- a/src/app/add-record/add-record.component.css
+++ b/src/app/add-record/add-record.component.css
@@ -1,7 +1,3 @@
-.container {
-    margin-top: 30px;
-}
-
 input.select.ng-invalid.ng-touched {
     border: 1px solid red; 
 }
@@ -10,4 +6,37 @@ input.select.ng-invalid.ng-touched {
     padding:20;
     background-color: lightgreen;
     border: 1px solid green;
+}
+
+
+.form-group{
+  padding:2px;
+  border:2px solid;
+  border-radius: 10px;
+  margin:2px;
+}
+.form-group1>label1{
+  position:absolute;
+  top:-1px;
+  left:30px;
+  background-color:white;
+}
+
+.form-group>input{
+  border:none;
+}
+
+hr.new5 {
+  border: 10px solid green;
+  border-radius: 5px;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: green;
+  color: white;
+  text-align: center;
 }
