--- a/src/app/glucose-record/glucose-record.component.html
+++ b/src/app/glucose-record/glucose-record.component.html
@@ -1,7 +1,6 @@
 <form (ngSubmit)="onSubmit(f2)" #f2="ngForm">
-        <div class="row">
-    <label for="glucose">Glucose:</label>
-    <input 
+        <div class="form-group">
+    <input class="form-control input-lg" 
         type="number" 
         placeholder="Glucose Measure" 
         ngModel
