--- a/src/app/meal/meal.component.html
+++ b/src/app/meal/meal.component.html
@@ -1,20 +1,13 @@
-<form (ngSubmit)="onSubmit(f2)" #f2="ngForm">
-    <div class="container" style="margin-top: 5%">    
-    <table class="table table-striped table-bordered">    
+    <form (ngSubmit)="onSubmit(f2)" #f2="ngForm">
+        <div class="form-group" style="margin-top: 5%">    
+            <table class="table table-striped table-bordered">    
         <thead>    
             <tr>    
                 <th>X</th>    
                 <th>Food Item</th>    
                 <th>Qty</th>    
                 <th>Units</th>
-                <th>Sugar</th>
-                <th>Fat</th>
-                <th>Sodium</th>
-                <th>Calories</th>
-                <th>Protein</th>
                 <th>Item</th>    
-                <th>Brand</th>    
-                <th>Brand</th>    
             </tr>    
         </thead>    
         <tbody>    
@@ -39,29 +32,21 @@
                     (focusout)="calcCant(fr.foodItemId, i, fr.cant)"/>    
                 </td>  
                 <td>{{fr.fi.unidad}}</td>
-                <td>{{fr.sugar}}</td>
-                <td>{{fr.fat}}</td>
-                <td>{{fr.sodium}}</td>
-                <td>{{fr.calories}}</td>
-                <td>{{fr.prot}}</td>
                 <td>
                   <img [src]="fr.fi.image" class="img-responsive" style="max-height: 40px;">
                 </td>  
-                <td>
-                  {{rs.getBrand(fr.fi.brand).description}}
-                </td>
-                <td>    
-                    <img [src]="rs.getBrand(fr.fi.brand).url" class="img-responsive" style="max-height: 40px;">
-                  </td>    
             </tr>    
+            <!--
             <tr>    
               <td (click)="addRow(i)">    
                 <i class="fa fa-plus fa-1x"></i>    
               </td>    
             </tr>    
+            -->
         </tbody>    
     </table>    
   </div>    
+
   <button 
 class="btn btn-primary" 
 [disabled]="false"
