--- a/src/app/weight-record/weight-record.component.html
+++ b/src/app/weight-record/weight-record.component.html
@@ -1,6 +1,6 @@
 <form (ngSubmit)="onSubmit(f2)" #f2="ngForm">
-        <div class="form-control">
-                <input 
+        <div class="form-group">
+                <input class="form-control input-lg"
                     type="number" 
                     placeholder="Weight" 
                     ngModel
@@ -10,8 +10,8 @@
                     required
                     #weight="ngModel"><span class="help-block" *ngIf="!weight.valid && weight.touched">Please enter Weight</span>
         </div>
-                <div class="form-control">
-                <input 
+                <div class="form-group">
+                <input class="form-control input-lg"
                     type="number" 
                     placeholder="Fat" 
                     ngModel
@@ -22,8 +22,8 @@
                     #fat="ngModel"><span class="help-block" *ngIf="!fat.valid && fat.touched">Please enter Fat</span>
                 </div>
 
-                <div class="form-control">
-                    <input 
+                <div class="form-group">
+                    <input class="form-control input-lg"
                     type="number" 
                     placeholder="non Fat" 
                     ngModel
@@ -34,8 +34,8 @@
                     #nonFat="ngModel"><span class="help-block" *ngIf="!nonFat.valid && nonFat.touched">Please enter non Fat</span>
                 </div>
 
-                <div class="form-control">
-                        <input 
+                <div class="form-group">
+                        <input class="form-control input-lg"
                         type="number" 
                         placeholder="% FAT" 
                         ngModel
@@ -46,8 +46,8 @@
                         >
                     </div>
 
-                    <div class="form-control">
-                            <input 
+                    <div class="form-group">
+                            <input class="form-control input-lg"
                             type="number" 
                             placeholder="BMI" 
                             ngModel
