--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -1,3 +1,5 @@
+<h3 class="container">Cesar Records</h3>
+<!--
 <nav class="navbar navbar-default">
 <div class="container-fluid">
     <div class="navbar-header">
@@ -20,3 +22,7 @@
     </div>
 </div>
 </nav>
+
+-->
+
+
