--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -1,14 +1,19 @@
-<h3 class="container">Cesar Records</h3>
+<!--<h3 class="container">Cesar Records</h3>-->
+
 <!--
 <nav class="navbar navbar-default">
-<div class="container-fluid">
+<div class="container">
     <div class="navbar-header">
-        <a routerLink="/" class="navbar-brand">Cesar Records</a>
+        <a routerLink="/" class="navbar-brand">CR</a>
     </div>
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
             <li><a routerLinkActive="active" routerLink="/">Nuevo</a></li>
+            <li><a routerLinkActive="active" routerLink="/Data">Data</a></li>
             <li><a routerLinkActive="active" routerLink="/Filter">Filter</a></li>
+            <li><a routerLinkActive="active" routerLink="/FoodItems">Food Items</a></li>
+            <li><a routerLinkActive="active" routerLink="/DrugItems">Drug Items</a></li>
+            <li><a routerLinkActive="active" routerLink="/Settings">Settings</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown"></li>
@@ -24,5 +29,3 @@
 </nav>
 
 -->
-
-
