--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -1,3 +1,8 @@
+<button #btn type="button" pButton icon="pi pi-bars" label="Show" (click)="menu.toggle($event)">Menu</button>
+
+<p-slideMenu #menu [model]="items" [popup]="true" [viewportHeight]="250"></p-slideMenu>
+
+
 <!--<h3 class="container">Cesar Records</h3>-->
 
 <!--
