--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -1,5 +1,9 @@
-<button #btn type="button" pButton icon="pi pi-bars" label="Show" (click)="menu.toggle($event)">Menu</button>
-
+<i class="fa fa-bars" style="font-size:36px" (click)="menu.toggle($event)"></i>
+<i class="fa fa-file-o" style="font-size:36px"></i>
+<i class="fa fa-glass" style="font-size:36px"></i>
+<i class="fa fa-tags" style="font-size:36px"></i>
+<i class="fa fa-list-alt" style="font-size:36px"></i>
+<i class="fa fa-cog" style="font-size:36px"></i>
 <p-slideMenu #menu [model]="items" [popup]="true" [viewportHeight]="250"></p-slideMenu>
 
 
