--- a/src/app/meal/meal.component.css
+++ b/src/app/meal/meal.component.css
@@ -8,6 +8,10 @@ input.select.ng-invalid.ng-touched {
     border: 1px solid green;
 }
 
+.selectedRow {
+  background-color: lightgreen;
+}
+
 
 .form-group{
   padding:2px;
