--- a/src/app/meal/meal.component.html
+++ b/src/app/meal/meal.component.html
@@ -1,4 +1,14 @@
     <form (ngSubmit)="onSubmit(f2)" #f2="ngForm">
+      <div class="form-group">
+        <label>Food Item:</label>
+        <select 
+        name="foodItem"
+        required
+        [(ngModel)] = "foodItemId"
+        (change)="onSelectedFoodItemChanged(foodItemId,currentId)">
+           <option *ngFor="let item of rs.FoodItems"  [selected]="item.Id == foodItemId"  [value]="item.Id">{{item.value}}</option> 
+        </select>     
+      </div>
         <div class="form-group" >    
             <table class="table table-striped table-bordered">    
         <thead>    
@@ -7,23 +17,21 @@
                 <th>Food Item</th>    
                 <th>Qty</th>    
                 <th>Units</th>
+                <th>sg</th>
+                <th>sd</th>
+                <th>FAT</th>
+                <th>Cals</th>
+                <th>Prot</th>
                 <th>Item</th>    
             </tr>    
         </thead>    
         <tbody>    
-             <tr *ngFor="let fr of foodRecords; let i = index;">    
+             <tr (click)="selectRow(i)" *ngFor="let fr of foodRecords; let i = index;">    
               <td (click)="deleteRow(i)">    
                 <i class="fa fa-trash fa-1x"></i>    
               </td>    
               <td>
-                <select 
-                [name]="rs.getName('foodItemId',i)"
-                class="form-control"
-                required
-                [(ngModel)] = "fr.foodItemId"
-                (change)="onSelectedFoodItemChanged(fr.foodItemId,i)">
-                   <option *ngFor="let item of rs.FoodItems"  [selected]="item.Id == fr.foodItemId"  [value]="item.Id">{{item.value}}</option> 
-                </select>                
+                  {{fr.fi.value}}
               </td>
                 <td>    
                   <input [disabled]="fr.foodItemId==null" 
@@ -32,10 +40,18 @@
                     (focusout)="calcCant(fr.foodItemId, i, fr.cant)"/>    
                 </td>  
                 <td>{{fr.fi.unidad}}</td>
+                <td>{{fr.sugar}}</td>
+                <td>{{fr.sodium}}</td>
+                <td>{{fr.fat}}</td>
+                <td>{{fr.calories}}</td>
+                <td>{{fr.prot}}</td>
                 <td>
                   <img [src]="fr.fi.image" class="img-responsive" style="max-height: 40px;">
                 </td>  
-            </tr>    
+            </tr>  
+            Selected Row:{{currentId}}. 
+            <strong>Totals: Sugar:{{totalSugar}}. Sodium:{{totalSodium}}. FAT:{{totalFat}}. Calories:{{totalCalories}}. Protein:{{totalProt}}</strong>
+
             <!--
             <tr>    
               <td (click)="addRow(i)">    
