copy to clkipboard component added

--- a/src/app/data-export/data-export.component.html
+++ b/src/app/data-export/data-export.component.html
@@ -1,8 +1,7 @@
 
+<input appCopy #data type="text" class="form-control"
+
+[(ngModel)]="rs.Data">
 <button class="btn-danger"
     (click)= "clearData()"
 >Clear</button>
-<textarea class="container"
-    name="data" cols=60 rows=20
-    [(ngModel)]="rs.Data">
-</textarea>
