--- a/src/app/add-record/add-record.component.html
+++ b/src/app/add-record/add-record.component.html
@@ -24,7 +24,7 @@
             required >
       </td>
       <td>
-            <i class="fa fa-file" style="font-size:36px"></i>
+            <i class="fa fa-file-o" style="font-size:36px"></i>
       </td>
       <td>
             <select 
