--- a/src/app/add-record/add-record.component.html
+++ b/src/app/add-record/add-record.component.html
@@ -36,8 +36,11 @@
             name = "rectype">
                 <option *ngFor="let item of rs.RecTypes" [selected]="item.Id == rs.RecType" [value]="item.Id">{{item.value}}</option> 
             </select>
-    
       </td>
+      <td>
+                  <button class="btn primary"(click)="onSelectedItemChanged(rs.RecType)">GO</button>
+            </td>
+      
 </table>    
 </div>
 
