--- a/src/app/meal/meal.component.html
+++ b/src/app/meal/meal.component.html
@@ -1,4 +1,4 @@
-    <form (ngSubmit)="onSubmit(f2)" #f2="ngForm">
+    <form (ngSubmit)="onSubmit(f2)" #f2="ngForm" ngNativeValidate > 
       <div class="form-group">
         <label>Food Item:</label>
         <select 
@@ -7,7 +7,8 @@
         [(ngModel)] = "foodItemId"
         (change)="onSelectedFoodItemChanged(foodItemId,currentId)">
            <option *ngFor="let item of rs.FoodItems"  [selected]="item.Id == foodItemId"  [value]="item.Id">{{item.value}}</option> 
-        </select>     
+        </select>   
+        <button class="btn primary" (click)="addItem()">Add</button>  
       </div>
         <div class="form-group" >    
             <table class="table table-striped table-bordered">    
