--- a/src/app/components/food-item-add/food-item-add.component.html
+++ b/src/app/components/food-item-add/food-item-add.component.html
@@ -4,8 +4,8 @@
     <label>Id:</label>
     <input class="form-control"
     name = "id"
-    required
-    [(ngModel)]= "fi.id"
+    disabled
+    [(ngModel)]= "rs.FoodItem.Id"
     type="text"
     placeholder="Unique Id">
 
@@ -15,52 +15,65 @@
     name = "value"
     required
     placeholder="Description"
-    [(ngModel)]="fi.value">
+    [(ngModel)]="rs.FoodItem.value"
+    (focusout)="rs.ValidateFoodDescription(rs.FoodItem.value)"
+    #value="ngModel">
+    <span class="help-block" *ngIf="!value.valid && value.touched">Please enter a description</span>
+    <span class="help-block" *ngIf="!value.valid ">{{rs.messaage}}</span>
 
     <label>Serving Quantity:</label>
     <input class="form-control"
     type="number"
     name ="cant"
     placeholder="Serving Quantity"
-    [(ngModel)]="fi.cant">
+    [(ngModel)]="rs.FoodItem.cant">
 
+    <div class="form-group">
     <label>Units:</label>
     <select 
     name="units"
-    [(ngModel)] = "fi.unidad">
-       <option *ngFor="let item of rs.Units"  [selected]="item.Id == fi.unidad"  [value]="item.Id">{{item.value}}</option> 
+    [(ngModel)] = "rs.FoodItem.unidad">
+       <option *ngFor="let item of rs.Units"  [selected]="item.Id == rs.FoodItem.unidad"  [value]="item.Id">{{item.value}}</option> 
     </select> 
-    <button class="btn primary" (click)=addUnit()>Add Unit</button>
-    
+    <button type="button" class="btn primary" (click)=addUnit()>Add Unit</button>
+   </div>
+
+    <div class="form-group">
     <label>Brand:</label>
     <select 
     name="brand"
-    [(ngModel)] = "fi.brand">
-       <option *ngFor="let item of rs.BrandItems"  [selected]="item.id == fi.brand"  [value]="item.id">{{item.description}}</option> 
+    (focusout)="getBrandImage()"
+    [(ngModel)] = "rs.FoodItem.brand">
+       <option *ngFor="let item of rs.BrandItems"  [selected]="item.id == rs.FoodItem.brand"  [value]="item.id">{{item.description}}</option> 
     </select> 
-    <button class="btn primary" (click)=addBrand()>Add Brand</button>
+    <button type="button" class="btn primary" (click)=addBrand()>Add Brand</button>
+    <img [src]="brandImage" class="img-responsive" style="max-height: 40px;">
+   </div>
 
-
+   <div class="form-group">
     <label>Image url:</label>
     <input class="form-control"
     type="text"
     name = "image"
     placeholder="Image url"
-    [(ngModel)]="fi.image">
+    [(ngModel)]="rs.FoodItem.image">
+
+    <img [src]="rs.FoodItem.image" class="img-responsive" style="max-height: 40px;">
+   </div>
 
     <label>Sugar:</label>
     <input class="form-control"
     type="number"
     name = "sugar"
     placeholder="Sugar"
-    [(ngModel)]="fi.sugar">
+    [(ngModel)]="rs.FoodItem.sugar">
 
     <label>FAT:</label>
     <input class="form-control"
     type="number"
     name = "fat"
     placeholder="FAT"
-    [(ngModel)]="fi.fat">
+    [(ngModel)]="rs.FoodItem.fat">
 
 
     <label>Sodium:</label>
@@ -68,27 +81,36 @@
     type="number"
     name = "sodium"
     placeholder="Sodium"
-    [(ngModel)]="fi.sodium">
+    [(ngModel)]="rs.FoodItem.sodium">
 
     <label>Calories:</label>
     <input class="form-control"
     type="number"
     name = "calories"
     placeholder="Calories"
-    [(ngModel)]="fi.calories">
+    [(ngModel)]="rs.FoodItem.calories">
 
     <label>Proteins:</label>
     <input class="form-control"
     type="number"
     name = "prot"
     placeholder="Proteins"
-    [(ngModel)]="fi.prot">
+    [(ngModel)]="rs.FoodItem.prot">
 
-    <img [src]="fi.image" class="img-responsive" style="max-height: 80px;">
 
 
 </div>
+
+<div class="footer">
+   <strong>
+  <p>{{rs.message}}</p>
+</strong>   
+</div>
+
 <button 
 class="btn btn-primary" 
+[disabled]="!f2.valid"
 type="submit">Submit</button>
-</form>        
+
+<button type="reset" class="btn-danger">Clear</button>
+</form>   
