--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -3,9 +3,11 @@
 <i class="fa fa-glass" style="font-size:36px" (click)="this.router.navigate(['/Filter'])"></i>
 <i class="fa fa-tags" style="font-size:36px"></i>
 <i class="fa fa-list-alt" style="font-size:36px"></i>
+<i class="fas fa-pills"  (click)="this.router.navigate(['/Items/Drug'],'')" style="font-size:36px"></i>
 <i class="fa fa-save"  (click)="this.router.navigate(['/Data'])" style="font-size:36px"></i>
 <i class="fa fa-cog" style="font-size:36px"></i>
 <p-slideMenu #menu [model]="items" [popup]="true" [viewportHeight]="250"></p-slideMenu>
+
 
 
 <!--<h3 class="container">Cesar Records</h3>-->
